Исправляет футер в портфолио и иконку в хедере

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
             </li>
             <li class="item">
               <a class="link" href="tel:+380961111111">
-                <svg class="icon-contacts" width="16" height="12">
+                <svg class="icon-contacts" width="10" height="16">
                   <use href="./images/sprite.svg#icon-tel"></use>
                 </svg>
                 <span>+38 096 111 11 11</span>
@@ -243,26 +243,86 @@
 
     <footer class="footer-section">
       <div class="container">
-        <a class="logo-footer link" href="./index.html" lang="en"
-          ><span class="accent">Web</span>Studio</a
-        >
+        <div class="address-section">
+          <a class="logo-footer" href="./index.html" lang="en"
+            ><span class="accent">Web</span>Studio</a
+          >
 
-        <address>
-          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+          <address>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
 
-          <ul class="contacts list">
-            <li>
-              <a class="contacts-info link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+            <ul class="contacts list">
+              <li class="item">
+                <a class="contacts-info link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a class="contacts-info link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="join">
+          <b class="join-text">Присоединяйтесь</b>
+          <ul class="social-icons list">
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icons-link"
+                aria-label="Инстаграм"
+                target="_blank"
+                rel="noopener noreferrer"
               >
+                <svg class="social-icons-svg">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contacts-info link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icons-link"
+                aria-label="Твиттер"
+                target="_blank"
+                rel="noopener noreferrer"
               >
+                <svg class="social-icons-svg">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icons-link"
+                aria-label="Фейсбук"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icons-svg">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                class="social-icons-link"
+                aria-label="ЛинкедИН"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icons-svg">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
